Move to Java 8 & Boot 1.5.6